# network

./: .gitignore  .gitmodules  index.html
00_ugly_sockets/: Makefile  client.c  server.c
0_sockets/: .gitignore  client.c  server.c
0_sockets/0_hello/: Makefile  client.c  server.c
0_sockets/1_netchat/: Makefile  netchat  netchat.c
0_sockets/2_showip/: Makefile  showip.c
1_nanomsg/: Makefile
1_nanomsg/0_icp/: build  clean  client.c  server.c
1_nanomsg/1_tcp/: client.c
1_zmq/: setup.sh
1_zmq/0_req_rep/: Makefile  client.c  client.py  server.c  server.py
1_zmq/1_pub_sub/: client.c  client.py  server.c  server.py
1_zmq/2_lab/: Makefile  broker.c  client.c  net.c  net.h
1_zmq/9_bg/: Makefile  dealer.c  dealer_game.c  dealer_game.h  dealer_net.c  dealer_net.h  list.h  player.c  rules.txt
lobby/c/: broker.c  broker.h  build.sh  clean  client.c  client.h  connection.c  connection.h  net.c  net.h
lobby/c/src/: CMakeLists.txt  broker.c  broker.h  client.c  connection.c  connection.h  log.h  net.c  net.h  system.c
lobby/nanomsg/: CMakeLists.txt
lobby/nanomsg/src/: CMakeLists.txt  broker.c  broker.h  client.c  connection.c  connection.h  net.h  server.c  server.h  system.c  system.h
lobby/zmq/: CMakeLists.txt  clean
lobby/zmq/libs/: zmq.cmake
lobby/zmq/src/: CMakeLists.txt  broker.c  client.c  connection.c  connection.h  list.h  net.c  net.h  server.c
slides/: index.html  index_bkp_socket.html  presentation.sh
